--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-	"autho": "Derkjan Super",
-	"description": "SMaterial a CSS framework based on Google's Material Design",
-	"license": "license.txt",
-	"devDependencies": {
-		"gulp-concat": "^2.6.0",
-		"gulp-plumber": "^1.1.0",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-uglify": "^1.5.3",
-		"gulp-util": "^3.0.7",
-		"gulp-watch": "^4.3.5",
-		"jshint": "^2.9.1"
-	}
+  "autho": "Derkjan Super",
+  "description": "SMaterial a CSS framework based on Google's Material Design",
+  "license": "license.txt",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5",
+    "gulp-zip": "^3.2.0",
+    "jshint": "^2.9.1"
+  }
 }
