--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   },
   "license": "license.txt",
   "devDependencies": {
-  	"minimatch": "^3.0.3",
-	"gulp": "^3.9.1",
-	"gulp-autoprefixer": "^3.1.1",
-	"gulp-concat": "^2.6.1",
-	"gulp-jshint": "^2.0.4",
-	"gulp-plumber": "^1.1.0",
-	"gulp-sass": "^3.1.0",
-	"gulp-sourcemaps": "^2.4.0",
-	"gulp-uglify": "^2.0.1",
-	"gulp-util": "^3.0.8",
-	"gulp-watch": "^4.3.11",
-	"gulp-zip": "^4.0.0",
-	"jshint": "^2.9.4"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^3.0.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.4.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.1",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "gulp-zip": "^4.0.0",
+    "jshint": "^2.9.4",
+    "minimatch": "^3.0.3"
   }
 }
