--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-watch": "^4.3.11",
     "gulp-zip": "^4.0.0",
     "jshint": "^2.9.4",
-    "minimatch": "^3.0.3"
+    "minimatch": "^3.0.3",
+    "postcss-merge-rules": "^2.1.2"
   }
 }
