Added fix to material-shadow mixin

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 BingSiteAuth.xml
 googlef8a0d5705f3e17df.html
 /node_modules
+/stylesheets/dark-smaterial.css
+/stylesheets/dark-smaterial.css.map
+/stylesheets/scss/dark-smaterial.scss
