Improved file three, improved webpack

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-/.idea
+/.idea/
 BingSiteAuth.xml
 googlef8a0d5705f3e17df.html
-/node_modules
-stylesheets/*.css
-/js/prism.js
-/js/smaterial.js
-js/smaterial-amp.js
-js/smaterial-dark.js
-js/smaterial-light.js
+/node_modules/
+/dist/
+
